force-app/main/default/objects/Product_Need_Request__c/Product_Need_Request__c.object-meta.xml
<CustomObject>
    <description>This object aims to keep record of specific product requests from customers either verbally or through Access</description>
    <label>Product Need Request</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Product Need Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Need Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>