force-app/main/default/objects/Product_Need_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Need Requests</relationshipLabel>
    <relationshipName>Product_Need_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>