force-app/main/default/objects/Product_Need_Request__c/fields/Brown_Stem_Rot__c.field-meta.xml
<CustomField>
    <fullName>Brown_Stem_Rot__c</fullName>
    <label>Brown Stem Rot</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>