force-app/main/default/objects/Product_Need_Request__c/fields/Canopy__c.field-meta.xml
<CustomField>
    <fullName>Canopy__c</fullName>
    <label>Canopy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>