force-app/main/default/objects/Product_Need_Request__c/fields/Cercospora__c.field-meta.xml
<CustomField>
    <fullName>Cercospora__c</fullName>
    <label>Cercospora</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>