force-app/main/default/objects/Product_Need_Request__c/fields/Emergence__c.field-meta.xml
<CustomField>
    <fullName>Emergence__c</fullName>
    <label>Emergence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>