force-app/main/default/objects/Product_Need_Request__c/fields/Flower_Color__c.field-meta.xml
<CustomField>
    <fullName>Flower_Color__c</fullName>
    <label>Flower Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>