force-app/main/default/objects/Product_Need_Request__c/fields/Frogeye__c.field-meta.xml
<CustomField>
    <fullName>Frogeye__c</fullName>
    <label>Frogeye</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>