force-app/main/default/objects/Product_Need_Request__c/fields/Green_Stem__c.field-meta.xml
<CustomField>
    <fullName>Green_Stem__c</fullName>
    <label>Green Stem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>