force-app/main/default/objects/Product_Need_Request__c/fields/Hilum_Color__c.field-meta.xml
<CustomField>
    <fullName>Hilum_Color__c</fullName>
    <label>Hilum Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>