force-app/main/default/objects/Product_Need_Request__c/fields/Iron_Deficiency_Chlorosis__c.field-meta.xml
<CustomField>
    <fullName>Iron_Deficiency_Chlorosis__c</fullName>
    <label>Iron Deficiency Chlorosis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>