force-app/main/default/objects/Product_Need_Request__c/fields/Maturity_Group__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Group__c</fullName>
    <label>Maturity Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>