force-app/main/default/objects/Product_Need_Request__c/fields/Metribuzin_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Metribuzin_Tolerance__c</fullName>
    <label>Metribuzin Tolerance</label>
    <length>250</length>
    <type>Text</type>
</CustomField>