force-app/main/default/objects/Product_Need_Request__c/fields/Plant_Height__c.field-meta.xml
<CustomField>
    <fullName>Plant_Height__c</fullName>
    <label>Plant Height</label>
    <length>255</length>
    <type>Text</type>
</CustomField>