force-app/main/default/objects/Product_Need_Request__c/fields/PRR_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>PRR_Tolerance__c</fullName>
    <label>PRR Tolerance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>