force-app/main/default/objects/Product_Need_Request__c/fields/Pubescence_Color__c.field-meta.xml
<CustomField>
    <fullName>Pubescence_Color__c</fullName>
    <label>Pubescence Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>