force-app/main/default/objects/Product_Need_Request__c/fields/Regions__c.field-meta.xml
<CustomField>
    <fullName>Regions__c</fullName>
    <label>Regions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>