force-app/main/default/objects/Product_Need_Request__c/fields/Replacement_for__c.field-meta.xml
<CustomField>
    <fullName>Replacement_for__c</fullName>
    <label>Replacement for</label>
    <length>255</length>
    <type>Text</type>
</CustomField>