force-app/main/default/objects/Product_Need_Request__c/fields/RPS_Gene__c.field-meta.xml
<CustomField>
    <fullName>RPS_Gene__c</fullName>
    <label>RPS Gene</label>
    <length>255</length>
    <type>Text</type>
</CustomField>