force-app/main/default/objects/Product_Need_Request__c/fields/Salt_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Salt_Tolerance__c</fullName>
    <label>Salt Tolerance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>