force-app/main/default/objects/Product_Need_Request__c/fields/SCN__c.field-meta.xml
<CustomField>
    <fullName>SCN__c</fullName>
    <label>SCN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>