force-app/main/default/objects/Product_Need_Request__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <label>Season</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Safra</valueSetName>
    </valueSet>
</CustomField>