force-app/main/default/objects/Product_Need_Request__c/fields/Shattering__c.field-meta.xml
<CustomField>
    <fullName>Shattering__c</fullName>
    <label>Shattering</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>