force-app/main/default/objects/Product_Need_Request__c/fields/Standability__c.field-meta.xml
<CustomField>
    <fullName>Standability__c</fullName>
    <label>Standability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>