force-app/main/default/objects/Product_Need_Request__c/fields/Stem_Canker__c.field-meta.xml
<CustomField>
    <fullName>Stem_Canker__c</fullName>
    <label>Stem Canker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>