force-app/main/default/objects/Product_Need_Request__c/fields/STS__c.field-meta.xml
<CustomField>
    <fullName>STS__c</fullName>
    <label>STS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>