force-app/main/default/objects/Product_Need_Request__c/fields/Sudden_Death_Syndrome__c.field-meta.xml
<CustomField>
    <fullName>Sudden_Death_Syndrome__c</fullName>
    <label>Sudden Death Syndrome</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>