force-app/main/default/objects/Product_Need_Request__c/fields/Trait__c.field-meta.xml
<CustomField>
    <fullName>Trait__c</fullName>
    <label>Trait</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Conventional</fullName>
            </value>
            <value>
                <fullName>Enlist</fullName>
            </value>
            <value>
                <fullName>XtendFlex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>