force-app/main/default/objects/Product_Need_Request__c/fields/White_Mold__c.field-meta.xml
<CustomField>
    <fullName>White_Mold__c</fullName>
    <label>White Mold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>